codemp/generated/game/g_ICARUScb.h

static void Q3_SetCinematicSkipScript( char *scriptname );
static void Q3_SetNoMindTrick( int entID, qboolean add );
static void Q3_SetCrouched( int entID, qboolean add );
static void Q3_SetWalking( int entID, qboolean add );
static void Q3_SetRunning( int entID, qboolean add );
static void Q3_SetForcedMarch( int entID, qboolean add );
static void Q3_SetChaseEnemies( int entID, qboolean add );
static void Q3_SetLookForEnemies( int entID, qboolean add );
static void Q3_SetFaceMoveDir( int entID, qboolean add );
static void Q3_SetAltFire( int entID, qboolean add );
static void Q3_SetDontFlee( int entID, qboolean add );
static void Q3_SetNoResponse( int entID, qboolean add );
static void Q3_SetCombatTalk( int entID, qboolean add );
static void Q3_SetAlertTalk( int entID, qboolean add );
static void Q3_SetUseCpNearest( int entID, qboolean add );
static void Q3_SetNoForce( int entID, qboolean add );
static void Q3_SetNoAcrobatics( int entID, qboolean add );
static void Q3_SetUseSubtitles( int entID, qboolean add );
static void Q3_SetNoFallToDeath( int entID, qboolean add );
static void Q3_SetDismemberable( int entID, qboolean dismemberable );
static void Q3_SetMoreLight( int entID, qboolean add );
static void Q3_SetUndying( int entID, qboolean undying );
static void Q3_SetInvincible( int entID, qboolean invincible );
static void Q3_SetForceInvincible( int entID, qboolean forceInv );
static void Q3_SetNoAvoid( int entID, qboolean noAvoid );
void SolidifyOwner( gentity_t *self );
static qboolean Q3_SetSolid( int entID, qboolean solid );
static void Q3_SetForwardMove( int entID, int fmoveVal );
static void Q3_SetRightMove( int entID, int rmoveVal );
static void Q3_SetLockAngle( int entID, const char *lockAngle );
static void Q3_CameraGroup( int entID, char *camG );
static void Q3_CameraGroupZOfs( float camGZOfs );
static void Q3_CameraGroupTag( char *camGTag );
static void Q3_RemoveRHandModel( int entID, char *addModel );
static void Q3_AddRHandModel( int entID, char *addModel );
static void Q3_AddLHandModel( int entID, char *addModel );
static void Q3_RemoveLHandModel( int entID, char *addModel );
static void Q3_LookTarget( int entID, char *targetName );
static void Q3_Face( int entID, int expression, float holdtime );
static qboolean Q3_SetLocation( int entID, const char *location );
static void Q3_SetPlayerLocked( int entID, qboolean locked );
static void Q3_SetLockPlayerWeapons( int entID, qboolean locked );
static void Q3_SetNoImpactDamage( int entID, qboolean noImp );
static qboolean Q3_SetBehaviorSet( int entID, int toSet, const char *scriptname );
static void Q3_SetDelayScriptTime( int entID, int delayTime );
static void Q3_SetPlayerUsable( int entID, qboolean usable );
static void Q3_SetDisableShaderAnims( int entID, int disabled );
static void Q3_SetShaderAnim( int entID, int disabled );
static void Q3_SetStartFrame( int entID, int startFrame );
static void Q3_SetEndFrame( int entID, int endFrame );
static void Q3_SetAnimFrame( int entID, int animFrame );
static void Q3_SetLoopAnim( int entID, qboolean loopAnim );
static void Q3_SetShields( int entID, qboolean shields );
static void Q3_SetSaberActive( int entID, qboolean active );
static void Q3_SetNoKnockback( int entID, qboolean noKnockback );
static void Q3_SetCleanDamagingEnts();
static void Q3_SetTextColor( vec4_t textcolor, const char *color );
static void Q3_SetCaptionTextColor( const char *color );
static void Q3_SetCenterTextColor( const char *color );
static void Q3_SetScrollTextColor( const char *color );
static void Q3_ScrollText( const char *id );
static void Q3_LCARSText( const char *id );
qboolean Q3_Set( int taskID, int entID, const char *type_name, const char *data );