codemp/julia/generated/game/g_ICARUScb.jl

Q3_SetCinematicSkipScript( scriptname_ ) = ccall((:Q3_SetCinematicSkipScript, lib), Void, ( Ptr{Char},  ), scriptname_ );
Q3_SetNoMindTrick( entID_, add_ ) = ccall((:Q3_SetNoMindTrick, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetCrouched( entID_, add_ ) = ccall((:Q3_SetCrouched, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetWalking( entID_, add_ ) = ccall((:Q3_SetWalking, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetRunning( entID_, add_ ) = ccall((:Q3_SetRunning, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetForcedMarch( entID_, add_ ) = ccall((:Q3_SetForcedMarch, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetChaseEnemies( entID_, add_ ) = ccall((:Q3_SetChaseEnemies, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetLookForEnemies( entID_, add_ ) = ccall((:Q3_SetLookForEnemies, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetFaceMoveDir( entID_, add_ ) = ccall((:Q3_SetFaceMoveDir, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetAltFire( entID_, add_ ) = ccall((:Q3_SetAltFire, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetDontFlee( entID_, add_ ) = ccall((:Q3_SetDontFlee, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetNoResponse( entID_, add_ ) = ccall((:Q3_SetNoResponse, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetCombatTalk( entID_, add_ ) = ccall((:Q3_SetCombatTalk, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetAlertTalk( entID_, add_ ) = ccall((:Q3_SetAlertTalk, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetUseCpNearest( entID_, add_ ) = ccall((:Q3_SetUseCpNearest, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetNoForce( entID_, add_ ) = ccall((:Q3_SetNoForce, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetNoAcrobatics( entID_, add_ ) = ccall((:Q3_SetNoAcrobatics, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetUseSubtitles( entID_, add_ ) = ccall((:Q3_SetUseSubtitles, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetNoFallToDeath( entID_, add_ ) = ccall((:Q3_SetNoFallToDeath, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetDismemberable( entID_, dismemberable_ ) = ccall((:Q3_SetDismemberable, lib), Void, ( Int32, qboolean,  ), entID_, dismemberable_ );
Q3_SetMoreLight( entID_, add_ ) = ccall((:Q3_SetMoreLight, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetUndying( entID_, undying_ ) = ccall((:Q3_SetUndying, lib), Void, ( Int32, qboolean,  ), entID_, undying_ );
Q3_SetInvincible( entID_, invincible_ ) = ccall((:Q3_SetInvincible, lib), Void, ( Int32, qboolean,  ), entID_, invincible_ );
Q3_SetForceInvincible( entID_, forceInv_ ) = ccall((:Q3_SetForceInvincible, lib), Void, ( Int32, qboolean,  ), entID_, forceInv_ );
Q3_SetNoAvoid( entID_, noAvoid_ ) = ccall((:Q3_SetNoAvoid, lib), Void, ( Int32, qboolean,  ), entID_, noAvoid_ );
SolidifyOwner( self_ ) = ccall((:SolidifyOwner, lib), Void, ( Ptr{gentity_t},  ), self_ );
Q3_SetSolid( entID_, solid_ ) = ccall((:Q3_SetSolid, lib), qboolean, ( Int32, qboolean,  ), entID_, solid_ );
Q3_SetForwardMove( entID_, fmoveVal_ ) = ccall((:Q3_SetForwardMove, lib), Void, ( Int32, Int32,  ), entID_, fmoveVal_ );
Q3_SetRightMove( entID_, rmoveVal_ ) = ccall((:Q3_SetRightMove, lib), Void, ( Int32, Int32,  ), entID_, rmoveVal_ );
Q3_SetLockAngle( entID_, lockAngle_ ) = ccall((:Q3_SetLockAngle, lib), Void, ( Int32, Ptr{Char},  ), entID_, lockAngle_ );
Q3_CameraGroup( entID_, camG_ ) = ccall((:Q3_CameraGroup, lib), Void, ( Int32, Ptr{Char},  ), entID_, camG_ );
Q3_CameraGroupZOfs( camGZOfs_ ) = ccall((:Q3_CameraGroupZOfs, lib), Void, ( Float32,  ), camGZOfs_ );
Q3_CameraGroupTag( camGTag_ ) = ccall((:Q3_CameraGroupTag, lib), Void, ( Ptr{Char},  ), camGTag_ );
Q3_RemoveRHandModel( entID_, addModel_ ) = ccall((:Q3_RemoveRHandModel, lib), Void, ( Int32, Ptr{Char},  ), entID_, addModel_ );
Q3_AddRHandModel( entID_, addModel_ ) = ccall((:Q3_AddRHandModel, lib), Void, ( Int32, Ptr{Char},  ), entID_, addModel_ );
Q3_AddLHandModel( entID_, addModel_ ) = ccall((:Q3_AddLHandModel, lib), Void, ( Int32, Ptr{Char},  ), entID_, addModel_ );
Q3_RemoveLHandModel( entID_, addModel_ ) = ccall((:Q3_RemoveLHandModel, lib), Void, ( Int32, Ptr{Char},  ), entID_, addModel_ );
Q3_LookTarget( entID_, targetName_ ) = ccall((:Q3_LookTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, targetName_ );
Q3_Face( entID_, expression_, holdtime_ ) = ccall((:Q3_Face, lib), Void, ( Int32, Int32, Float32,  ), entID_, expression_, holdtime_ );
Q3_SetLocation( entID_, location_ ) = ccall((:Q3_SetLocation, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, location_ );
Q3_SetPlayerLocked( entID_, locked_ ) = ccall((:Q3_SetPlayerLocked, lib), Void, ( Int32, qboolean,  ), entID_, locked_ );
Q3_SetLockPlayerWeapons( entID_, locked_ ) = ccall((:Q3_SetLockPlayerWeapons, lib), Void, ( Int32, qboolean,  ), entID_, locked_ );
Q3_SetNoImpactDamage( entID_, noImp_ ) = ccall((:Q3_SetNoImpactDamage, lib), Void, ( Int32, qboolean,  ), entID_, noImp_ );
Q3_SetBehaviorSet( entID_, toSet_, scriptname_ ) = ccall((:Q3_SetBehaviorSet, lib), qboolean, ( Int32, Int32, Ptr{Char},  ), entID_, toSet_, scriptname_ );
Q3_SetDelayScriptTime( entID_, delayTime_ ) = ccall((:Q3_SetDelayScriptTime, lib), Void, ( Int32, Int32,  ), entID_, delayTime_ );
Q3_SetPlayerUsable( entID_, usable_ ) = ccall((:Q3_SetPlayerUsable, lib), Void, ( Int32, qboolean,  ), entID_, usable_ );
Q3_SetDisableShaderAnims( entID_, disabled_ ) = ccall((:Q3_SetDisableShaderAnims, lib), Void, ( Int32, Int32,  ), entID_, disabled_ );
Q3_SetShaderAnim( entID_, disabled_ ) = ccall((:Q3_SetShaderAnim, lib), Void, ( Int32, Int32,  ), entID_, disabled_ );
Q3_SetStartFrame( entID_, startFrame_ ) = ccall((:Q3_SetStartFrame, lib), Void, ( Int32, Int32,  ), entID_, startFrame_ );
Q3_SetEndFrame( entID_, endFrame_ ) = ccall((:Q3_SetEndFrame, lib), Void, ( Int32, Int32,  ), entID_, endFrame_ );
Q3_SetAnimFrame( entID_, animFrame_ ) = ccall((:Q3_SetAnimFrame, lib), Void, ( Int32, Int32,  ), entID_, animFrame_ );
Q3_SetLoopAnim( entID_, loopAnim_ ) = ccall((:Q3_SetLoopAnim, lib), Void, ( Int32, qboolean,  ), entID_, loopAnim_ );
Q3_SetShields( entID_, shields_ ) = ccall((:Q3_SetShields, lib), Void, ( Int32, qboolean,  ), entID_, shields_ );
Q3_SetSaberActive( entID_, active_ ) = ccall((:Q3_SetSaberActive, lib), Void, ( Int32, qboolean,  ), entID_, active_ );
Q3_SetNoKnockback( entID_, noKnockback_ ) = ccall((:Q3_SetNoKnockback, lib), Void, ( Int32, qboolean,  ), entID_, noKnockback_ );
Q3_SetCleanDamagingEnts() = ccall((:Q3_SetCleanDamagingEnts, lib), Void, (),  );
Q3_SetTextColor( textcolor_, color_ ) = ccall((:Q3_SetTextColor, lib), Void, ( vec4_t, Ptr{Char},  ), textcolor_, color_ );
Q3_SetCaptionTextColor( color_ ) = ccall((:Q3_SetCaptionTextColor, lib), Void, ( Ptr{Char},  ), color_ );
Q3_SetCenterTextColor( color_ ) = ccall((:Q3_SetCenterTextColor, lib), Void, ( Ptr{Char},  ), color_ );
Q3_SetScrollTextColor( color_ ) = ccall((:Q3_SetScrollTextColor, lib), Void, ( Ptr{Char},  ), color_ );
Q3_ScrollText( id_ ) = ccall((:Q3_ScrollText, lib), Void, ( Ptr{Char},  ), id_ );
Q3_LCARSText( id_ ) = ccall((:Q3_LCARSText, lib), Void, ( Ptr{Char},  ), id_ );
Q3_Set( taskID_, entID_, type_name_, data_ ) = ccall((:Q3_Set, lib), qboolean, ( Int32, Int32, Ptr{Char}, Ptr{Char},  ), taskID_, entID_, type_name_, data_ );
